<resources>
    <string name="app_name">Wahed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="account_id">Account ID</string>
    <string name="security">Security</string>
    <string name="account_history">Account History</string>
    <string name="investment_profile">Investment Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="rate_us">Rate Us</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="more">More</string>
    <string name="account_type">Account Type</string>
    <string name="risk_level">Risk Level</string>
    <string name="login_details">Login Details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="login_history">Login History</string>
    <string name="ip_address">IP Address</string>
    <string name="time">Time</string>
    <string name="country">Country</string>
    <string name="state_region">State/Region</string>
    <string name="account_status">Account Status</string>
    <string name="current_risk_profile">Current Risk Profile</string>
    <string name="your_current_risk_profile">your current risk profile</string>
    <string name="moderately_agressive">Moderately Agressive</string>
    <string name="expected_annual_return">Expected annual return</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="market_value">Market Value</string>
    <string name="total_gains">Total Gains</string>
    <string name="time_weighted_return">Time Weighted Return</string>
    <string name="account_summary">Account Summary</string>
    <string name="deposite_withdrawals">Deposite/Withdrawals</string>
    <string name="gain_loss">Gain/Loss</string>
    <string name="realized">Realized</string>
    <string name="unrealized">Unrealized</string>
    <string name="advisor_fees">Advisor Fees</string>
    <string name="others">Others</string>
    <string name="ending_values">Ending Values</string>
    <string name="contact_infomation">Contact Infomation</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="zip_pin">Zip/Pin</string>
    <string name="imployment_information">Imployment Information</string>
    <string name="employemetn_type">Employement Type</string>
    <string name="personal_information">Personal Information</string>
    <string name="marital_status">Marital Status</string>
    <string name="country_of_citizenship">Country Of Citizenship</string>
    <string name="annual_income">Annual Income</string>
    <string name="liquid_net_worth">Liquid Net Worth</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="transaction">Transaction</string>
    <string name="account_debited">Account Debited</string>
    <string name="balance">Balance</string>
    <string name="date">Date</string>
    <string name="symbol">Symbol</string>
    <string name="allocation">Allocation</string>
    <string name="quantity">Quantity</string>
    <string name="cost_basis_price">Cost Basis Price</string>
    <string name="unrealized_gains_losses">Unrealized Gains/Losses</string>
    <string name="position_value">Position Value</string>
    <string name="employee_name">Employee Name</string>
    <string name="occupation">Occupation</string>
    <string name="old_password">Old Password</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="new_password">New Password</string>
    <string name="notificattion_test3">Information and articles on shariah compliant &amp; other ethical securities</string>


</resources>
