<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/nav_security"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/security"/>
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/nav_notification"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/notifications"/>
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/nav_my_profile"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/my_profile"/>
        <item
            android:id="@+id/nav_investment"
            android:icon="@drawable/nav_investment"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/investment_profile"/>
        <item
            android:id="@+id/nav_account_history"
            android:icon="@drawable/nav_account_history"
            app:actionLayout="@layout/menu_counter"
            android:title="@string/account_history"/>
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_invite_friends"
                android:icon="@drawable/nav_invite_friends"
                app:actionLayout="@layout/menu_counter"
                android:title="@string/invite_friends"/>
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@drawable/nav_rate_us"
                app:actionLayout="@layout/menu_counter"
                android:title="@string/rate_us"/>
            <item
                android:id="@+id/nav_send_feedback"
                android:icon="@drawable/nav_send_feedback"
                app:actionLayout="@layout/menu_counter"
                android:title="@string/send_feedback"/>


        </menu>
    </item>
</menu>
