<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/tv_action_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:fontFamily="fonts/OmnesMed.ttf"
                android:text="Investment Profile"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_status"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_sign_in"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/account_status"
                android:textColor="@color/colorHintText"/>

            <TextView
                android:id="@+id/tv_account_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_sign_in"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorActiveText"
                android:textSize="17sp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/current_risk_profile"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sign_in"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/your_current_risk_profile"
                    android:textColor="@color/colorHintText"/>

                <TextView
                    android:id="@+id/tv_current_risk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sign_in"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorBlackText"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/tv_sign_in"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/expected_annual_return"
                    android:textColor="@color/colorHintText"/>

                <TextView
                    android:id="@+id/tv_exp_return"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sign_in"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/colorBlackText"
                    android:textSize="17sp"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
